crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@172.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE prt1_l_p3_p2 PARTITION OF prt1_l_p3 FOR VALUES FROM (13) TO (25);
---
CreateStmt@0..78
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..25
    Ident@13..25 "prt1_l_p3_p2"
  Whitespace@25..26 " "
  Partition@26..35 "PARTITION"
  Whitespace@35..36 " "
  Of@36..38 "OF"
  Whitespace@38..39 " "
  RangeVar@39..48
    Ident@39..48 "prt1_l_p3"
  Whitespace@48..49 " "
  For@49..52 "FOR"
  Whitespace@52..53 " "
  Values@53..59 "VALUES"
  Whitespace@59..60 " "
  PartitionBoundSpec@60..76
    From@60..64 "FROM"
    Whitespace@64..65 " "
    Ascii40@65..66 "("
    AConst@66..68
      Iconst@66..68 "13"
    Ascii41@68..69 ")"
    Whitespace@69..70 " "
    To@70..72 "TO"
    Whitespace@72..73 " "
    Ascii40@73..74 "("
    AConst@74..76
      Iconst@74..76 "25"
  Ascii41@76..77 ")"
  Ascii59@77..78 ";"

