crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@173.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO prt1_l SELECT i, i % 25, to_char(i % 4, 'FM0000') FROM generate_series(0, 599, 2) i;"
---
InsertStmt@0..96
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "prt1_l"
  Whitespace@18..19 " "
  SelectStmt@19..95
    Select@19..25 "SELECT"
    Whitespace@25..26 " "
    ResTarget@26..27
      ColumnRef@26..27
        Ident@26..27 "i"
    Ascii44@27..28 ","
    Whitespace@28..29 " "
    ResTarget@29..35
      AExpr@29..35
        ColumnRef@29..30
          Ident@29..30 "i"
        Whitespace@30..31 " "
        Ascii37@31..32 "%"
        Whitespace@32..33 " "
        AConst@33..35
          Iconst@33..35 "25"
    Ascii44@35..36 ","
    Whitespace@36..37 " "
    ResTarget@37..60
      FuncCall@37..60
        Ident@37..44 "to_char"
        Ascii40@44..45 "("
        AExpr@45..50
          ColumnRef@45..46
            Ident@45..46 "i"
          Whitespace@46..47 " "
          Ascii37@47..48 "%"
          Whitespace@48..49 " "
          AConst@49..50
            Iconst@49..50 "4"
        Ascii44@50..51 ","
        Whitespace@51..52 " "
        AConst@52..60
          Sconst@52..60 "'FM0000'"
    Ascii41@60..61 ")"
    Whitespace@61..62 " "
    From@62..66 "FROM"
    Whitespace@66..67 " "
    RangeFunction@67..95
      List@67..92
        FuncCall@67..92
          Ident@67..82 "generate_series"
          Ascii40@82..83 "("
          AConst@83..84
            Iconst@83..84 "0"
          Ascii44@84..85 ","
          Whitespace@85..86 " "
          AConst@86..89
            Iconst@86..89 "599"
          Ascii44@89..90 ","
          Whitespace@90..91 " "
          AConst@91..92
            Iconst@91..92 "2"
      Ascii41@92..93 ")"
      Whitespace@93..94 " "
      Alias@94..95
        Ident@94..95 "i"
  Ascii59@95..96 ";"

