crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@175.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE prt2_l (a int, b int, c varchar) PARTITION BY RANGE(b);"
---
CreateStmt@0..68
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..19
    Ident@13..19 "prt2_l"
  Whitespace@19..20 " "
  Ascii40@20..21 "("
  ColumnDef@21..26
    Ident@21..22 "a"
    Whitespace@22..23 " "
    TypeName@23..26
      IntP@23..26 "int"
  Ascii44@26..27 ","
  Whitespace@27..28 " "
  ColumnDef@28..33
    Ident@28..29 "b"
    Whitespace@29..30 " "
    TypeName@30..33
      IntP@30..33 "int"
  Ascii44@33..34 ","
  Whitespace@34..35 " "
  ColumnDef@35..44
    Ident@35..36 "c"
    Whitespace@36..37 " "
    TypeName@37..44
      Varchar@37..44 "varchar"
  Ascii41@44..45 ")"
  Whitespace@45..46 " "
  PartitionSpec@46..66
    Partition@46..55 "PARTITION"
    Whitespace@55..56 " "
    By@56..58 "BY"
    Whitespace@58..59 " "
    Range@59..64 "RANGE"
    Ascii40@64..65 "("
    PartitionElem@65..66
      Ident@65..66 "b"
  Ascii41@66..67 ")"
  Ascii59@67..68 ";"

