crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@176.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE prt2_l_p1 PARTITION OF prt2_l FOR VALUES FROM (0) TO (250);
---
CreateStmt@0..72
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..22
    Ident@13..22 "prt2_l_p1"
  Whitespace@22..23 " "
  Partition@23..32 "PARTITION"
  Whitespace@32..33 " "
  Of@33..35 "OF"
  Whitespace@35..36 " "
  RangeVar@36..42
    Ident@36..42 "prt2_l"
  Whitespace@42..43 " "
  For@43..46 "FOR"
  Whitespace@46..47 " "
  Values@47..53 "VALUES"
  Whitespace@53..54 " "
  PartitionBoundSpec@54..70
    From@54..58 "FROM"
    Whitespace@58..59 " "
    Ascii40@59..60 "("
    AConst@60..61
      Iconst@60..61 "0"
    Ascii41@61..62 ")"
    Whitespace@62..63 " "
    To@63..65 "TO"
    Whitespace@65..66 " "
    Ascii40@66..67 "("
    AConst@67..70
      Iconst@67..70 "250"
  Ascii41@70..71 ")"
  Ascii59@71..72 ";"

